# python-alphasign

./: README.md  pyproject.toml  requirements.txt
alphasign/: __init__.py  animations.py  commands.py  easy.py  image.py  modes.py  packet.py  sign.py  singleton.py  text.py  transitions.py  types.py
alphasign/command/: __init__.py  write_small_dots.py  write_special_functions.py  write_text.py
alphasign/commands/: write_small_dots.py
alphasign/files/: __init__.py  text.py
alphasign/type/: __init__.py  _common.py  all.py  alpha_2x0c.py  alpha_4200c.py
examples/: bad-apple.py  clock.py  easy_image.py  easy_text.py  image_raw.py  special_functions.py  text_full.py  ticker.py
