[project]
name = "pyalphasign"
version = "0.1.0"
authors = [
  { name="prototux", email="jason@prototux.net" },
]
description = "An implementation of Alpha/BetaBrite/Adaptive LED signs protocol"
keywords = ["alphasign", "betabrite", "LED Sign", "alpha protocol", "adaptive displays"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
	"Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
	"Pillow>9.4.0",
	"pyserial>3.4"
]

[project.urls]
"Homepage" = "https://github.com/prototux/python-alphasign"
"Bug Tracker" = "https://github.com/prototux/python-alphasign/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
